<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:id="@+id/scroll"
    tools:context=".MainActivity2">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageslide"
        android:layout_width="match_parent"
        android:layout_height="418dp"
        android:background="@android:color/transparent"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true" />

    <TextView
        android:id="@+id/game"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="510dp"
        android:background="@drawable/custom_button"
        android:gravity="center_vertical"
        android:text="ABOUT"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="bold"
        app:backgroundTint="#F50057"
        app:backgroundTintMode="multiply"
        tools:ignore="RtlCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="510dp"
        android:onClick="scrolldown"
        android:src="@drawable/ic_action_downarrow" />

    <TextView
        android:id="@+id/loginsignup"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="615dp"
        android:background="@drawable/custom_button"
        android:text="LOGIN/SIGNUP"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textAlignment="center"
        app:backgroundTint="#F50057"
        app:backgroundTintMode="multiply"
        android:gravity="center_vertical"
        tools:ignore="RtlCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sidebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:onClick="login"
        android:layout_marginTop="615dp"

        android:src="@drawable/ic_action_rightarrow" />

    <TextView
        android:id="@+id/about"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginsignup"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="start"
        android:text="@string/about"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:layout_margin="40dp"
        android:layout_marginTop="300dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/aboutus"
        android:gravity="start" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutus"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="start"
        android:text="@string/one"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_margin="40dp"
        android:layout_marginTop="300dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/two"
        android:gravity="start" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_margin="40dp"
        android:layout_marginTop="400dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/three"
        android:gravity="start" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_margin="30dp"
        android:layout_marginTop="300dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/four"
        android:gravity="start" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_margin="40dp"
        android:layout_marginTop="400dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/five"
        android:gravity="start" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_margin="30dp"
        android:layout_marginTop="300dp"
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/six"
        android:gravity="start" />
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/upbutton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="scrollup"
       android:layout_below="@+id/textView5"
       android:layout_alignParentEnd="true"
       android:layout_marginEnd="10dp"
       android:src="@drawable/ic_action_uparrow"
       android:layout_alignParentRight="true"
       android:layout_marginRight="10dp" />


</RelativeLayout>

</ScrollView>